# matrix-automate-bridge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
