[project]
name = "matrix-automate-bridge"
version = "0.1.0"
description = "Server that triggers action in services like n8n or activepieces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.128.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
